--- a/www/templates/Animaux.html
+++ b/www/templates/Animaux.html
@@ -22,12 +22,36 @@
 	                        { namekabyle: 'Amcic', namefrancais: 'Chat',nameanglais: 'Cat' ,image:'Chat'},
 	                        { namekabyle: 'Aqjun',namefrancais: 'Chien',nameanglais: 'Dog' ,image:'Chien'},
 	                        { namekabyle: 'Tifireεqest', namefrancais: 'Crabe',nameanglais: 'Crab' ,image:'Crabe'}, 
-	                        { namekabyle: 'ayaẓiḍ ', namefrancais: 'Coq',nameanglais: 'Cock' ,image:'Coq'}, 
-	                        { namekabyle: 'lfil,Ilef ', namefrancais: 'Eléphant',nameanglais: 'Elephant' ,image:'Elephant'}, 
-	                        { namekabyle: 'taweṭṭuft ', namefrancais: 'Fourmi',nameanglais: 'Ant' ,image:'Fourmi'},
-	                        { namekabyle: 'taγzalt ', namefrancais: 'Gazelle',nameanglais: 'Gazelle' ,image:'Gazelle'} 
+	                        { namekabyle: 'Ayaẓiḍ ', namefrancais: 'Coq',nameanglais: 'Cock' ,image:'Coq'}, 
+	                        { namekabyle: 'Lfil,Ilef ', namefrancais: 'Eléphant',nameanglais: 'Elephant' ,image:'Elephant'}, 
+	                        { namekabyle: 'Taweṭṭuft ', namefrancais: 'Fourmi',nameanglais: 'Ant' ,image:'Fourmi'},
+	                        { namekabyle: 'Taγzalt ', namefrancais: 'Grenouille',nameanglais: 'Gazelle' ,image:'Grenouille'}, 
+	                        { namekabyle: 'Amqeṛquṛ ', namefrancais: 'Gazelle',nameanglais: 'Frog' ,image:'Gazelle'}, 
+	                        { namekabyle: 'Aṛẓaẓ ', namefrancais: 'Guêpe',nameanglais: 'Wasp' ,image:'Guepe'},
+	                        { namekabyle: 'Inisi ', namefrancais: 'Hérisson',nameanglais: 'Hedgehog' ,image:'Herisson'}, 
+	                        { namekabyle: 'Bururu ', namefrancais: 'Hibou',nameanglais: 'Owl' ,image:'Hibou'}, 
+	                        { namekabyle: 'Tifirellest ', namefrancais: 'Hirondelle',nameanglais: 'Swallow' ,image:'Hirondelle'}, 
+	                        { namekabyle: 'Awtul ', namefrancais: 'Lapin',nameanglais: 'Rabbit' ,image:'Lapin'}, 
+	                        { namekabyle: 'Izem ', namefrancais: 'Lion',nameanglais: 'Lion' ,image:'Lion'},
+	                        { namekabyle: 'Tizemt,Tasedda', namefrancais: 'Lionne',nameanglais: 'Lioness' ,image:'Lionne'},
+	                        { namekabyle: 'Izi ', namefrancais: 'Mouche',nameanglais: 'Fly' ,image:'Mouche'},
+	                        { namekabyle: 'Tizitt ', namefrancais: 'Moustique',nameanglais: 'Pigeon' ,image:'Moustique'},
+	                        { namekabyle: 'Ikkeri,aḥuli', namefrancais: 'Mouton',nameanglais: 'Mosquito' ,image:'Mouton'},
+	                        { namekabyle: 'Itbir, titbirt ', namefrancais: 'Pigeon',nameanglais: 'Mouton' ,image:'Pigeon'},
+	                        { namekabyle: 'Aḥelluf', namefrancais: 'Porc',nameanglais: 'Pork' ,image:'Porc'},
+	                        { namekabyle: 'Aruy', namefrancais: 'Porc-épic',nameanglais: 'Porcupine' ,image:'Porc-epic'},
+	                        { namekabyle: 'Aslem, lḥut', namefrancais: 'Poisson',nameanglais: 'Fish' ,image:'Pigeon'},
+	                        { namekabyle: 'Tayaẓiṭ', namefrancais: 'Poule',nameanglais: 'Hen' ,image:'Mouton'},
+	                    	{ namekabyle: 'Izirdi, abaṛeγ ', namefrancais: 'Renard',nameanglais: 'Fox' ,image:'Renard'},
+	                        { namekabyle: 'Ajṛad', namefrancais: 'Sauterelle',nameanglais: 'Grasshopper' ,image:'Sauterelle'},
+	                        { namekabyle: 'Tiγirdemt', namefrancais: 'Scorpion',nameanglais: 'Scorpio' ,image:'Scorpion'},
+	                        { namekabyle: 'Azrem', namefrancais: 'Serpent',nameanglais: 'Snake' ,image:'Serpent'},
+	                        { namekabyle: 'Ibki', namefrancais: 'Singe',nameanglais: 'Monkey' ,image:'Pigeon'},
+	                        { namekabyle: 'Aγerda, amumed ', namefrancais: 'Souris',nameanglais: 'Mouse' ,image:'Souris'},
+	                        { namekabyle: 'Afekrun, ifker', namefrancais: 'Tortue',nameanglais: 'Turtle' ,image:'Tortue'},
+	                        { namekabyle: 'Tafunast', namefrancais: 'Vache',nameanglais: 'Cow' ,image:'Vache'}
+		                   ]"> 
 
-		                   ]">        
 			<div class="list">
 
 				    <div class="item item-thumbnail-left" ng-repeat="animal in animals | filter:q as results">
