--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -41,6 +41,9 @@
          <ion-item nav-clear menu-close href="#/app/Couleurs">
           <i class="icon ion-ios-color-wand"></i>&nbsp;&nbsp;Couleurs
         </ion-item>
+        <ion-item nav-clear menu-close href="#/app/Dictionnaire">
+          <i class="icon ion-ios-color-wand"></i>&nbsp;&nbsp;Dictionnaire
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
