--- a/www/templates/Dictionnaire.html
+++ b/www/templates/Dictionnaire.html
@@ -1,23 +1,90 @@
 <ion-view view-title="Dictionnaire">
   <ion-content>
-  <div class="row">
-  <div class="col">
-    <div class="col">
-
-        <div class="item" ng-repeat="dic in dics | filter:q as results">
-                  <div class="name">
-                     {{dic.kb}}
-                  </div></br>              
-                  <div class="name2">
-                    {{dic.fr}}
-                  </div></br>  
+    <div class="row">
+      <div class="col">
+        <ion-list>
+            <ion-item ng-repeat="word in words">
+               <p>{{word.kb}}:{{word.fr}} </p>
+            </ion-item>
+        </ion-list>
+      </div>
+     
+     
+      <div class="col">
+      <ion-scroll  direction="x" class="wide-as-needed">
+          <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+          <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>       
+           <button class="button button-small button-assertive">
+            Small Button
+          </button>
         </div>
-
-  </div>
-  <div class="col"></div>
-  <div class="col"></div>
-  <div class="col"></div>
-</div>
-        
+       
+      </ion-scroll>
+      <div class="col"></div>
+      <div class="col"></div>
+      <div class="col"></div>
+    </div>   
   </ion-content>
 </ion-view>
+
