--- a/www/templates/Dictionnaire.html
+++ b/www/templates/Dictionnaire.html
@@ -8,82 +8,83 @@
       </div>
       </br>
       <ion-scroll  direction="x" class="wide-as-needed" zooming="true">
-          <button class="button button-small button-assertive" ng-click="ShowA()">
+      
+          <button class="button  button-assertive" ng-click="ShowA()">
             A
           </button>
-           <button class="button button-small button-assertive" ng-click="ShowB()">
+           <button class="button  button-assertive" ng-click="ShowB()">
             B
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive" ng-click="ShowC()">
             C
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             D
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             E
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             F
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             G
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             H
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             I
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             J
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             K
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             L
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             M
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             N
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             O
           </button>
-          <button class="button button-small button-assertive">
+          <button class="button  button-assertive">
             P
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             Q
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             R
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             S
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             T
           </button>
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             U
           </button>       
-           <button class="button button-small button-assertive">
+           <button class="button  button-assertive">
             V
           </button> 
-          <button class="button button-small button-assertive">
+          <button class="button  button-assertive">
             W
           </button> 
-          <button class="button button-small button-assertive">
+          <button class="button  button-assertive">
             X
           </button> 
-          <button class="button button-small button-assertive">
+          <button class="button  button-assertive">
             Y
           </button> 
-          <button class="button button-small button-assertive">
+          <button class="button  button-assertive">
             Z
           </button> 
       </ion-scroll></br>
@@ -114,7 +115,7 @@
           <div class="col">
             <div class="list">
             <div class="item item-divider">
-              {{word.kabyle1}}
+              {{word.Kb}}
             </div>
           </div>
           </div>
