--- a/www/templates/Couleurs.html
+++ b/www/templates/Couleurs.html
@@ -1,5 +1,11 @@
-<ion-view view-title="Alphabets">
+<ion-view view-title="Couleurs">
   <ion-content>
+      <div class="spinner">
+		  <div class="ball ball-1"></div>
+		  <div class="ball ball-2"></div>
+		  <div class="ball ball-3"></div>
+		  <div class="ball ball-4"></div>
+	  </div>
   <ul class="list">
 	    <li class="item" style="background-color:#000">
 	      	<h1 style="color:#fff;text-align:center";>Aberkan, taberkant (fém)<h1>
@@ -55,6 +61,6 @@
 	      	<h1 style="color:#fff;text-align:center";>Rouge<h1>
 	      	<h1 style="color:#fff;text-align:center";>Red<h1>
 	    </li>
-	</ul>
+	</ul> -->
   </ion-content>
 </ion-view>
